# vcaml

./: .gitignore  .gitlab-ci.yml  .merlin  .ocamlformat  .ocamlinit  .travis.yml  Makefile  README.md  driver.ml  driver.mli  dune  dune-project  heap.ml  main.ml  toCaml.ml  vHornClauses.ml  vHornClauses.mli  vcaml.opam  vpredef.ml  vtypes.ml  vutils.ml
backward/: FancyZ3.ml  demoBack.ml  dempBack.t  dune
examples/: .gitignore  README.md  arith.ml  currying.ml  demo1.ml  demo2.ml  eval_order.ml  fib.ml  fib2.ml  mc91.ml  seq.ml  work.ml
lib/: README.md  dune
stuff/: reader_demo.ml
tests/: .merlin  cmps_defined.ml  cmps_defined.t  dune
tex/: .gitignore  Makefile  main1.tex
tex/batoev_vkr/: 02selectives.tex  03conversion.tex  05impl.tex  Makefile  bat_vkr-dot2tex-fig1.dot  bat_vkr.nav  bat_vkr.tex  bat_vkr.vrb  graph.tex  heading.tex  pipeline.tex  references.bib  test.dot
