(env
  (dev
    (flags (-strict-sequence -strict-formats -short-paths -keep-locs -w -3-9-32))))

(library
  (name vcore)
  (modules vutils vpredef vtypes vHornClauses heap toCaml driver)
  (libraries str base compiler-libs.common fmt terminal_size GT)
  (flags (-strict-sequence -strict-formats -short-paths -keep-locs -open Base -w -3-9+32))
  (preprocess (pps GT.ppx_all ))
)

(executable
  (name main)
  (modules main)
  (libraries vcore)
  (preprocess (pps GT.ppx ))
)

; (rule
;  (alias run_backward)
;  (action
;   (run ./backward/demoBack.exe )))
